fix enum
